[gd_scene load_steps=7 format=3 uid="uid://dxhr8v5v2all2"]

[ext_resource type="Script" path="res://scripts/table.gd" id="1_sbhe6"]
[ext_resource type="Texture2D" uid="uid://xbaye0v8fx22" path="res://assets/club.png" id="2_ub3pt"]
[ext_resource type="Texture2D" uid="uid://cxcy1twa2202f" path="res://assets/heart.png" id="3_8rvcp"]
[ext_resource type="Texture2D" uid="uid://bb7igeblv2k6p" path="res://assets/spade.png" id="4_2mkn7"]

[sub_resource type="Theme" id="Theme_657et"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7l7j7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ub3pt")
}, {
"duration": 1.0,
"texture": ExtResource("3_8rvcp")
}, {
"duration": 1.0,
"texture": ExtResource("4_2mkn7")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Table" type="Node2D"]
script = ExtResource("1_sbhe6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 2400.0
color = Color(0.393954, 0.236316, 0.0521809, 1)

[node name="Button2" type="Button" parent="."]
offset_left = 940.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 140.0
text = "home"

[node name="bp1" type="Button" parent="."]
offset_left = 130.0
offset_top = 320.0
offset_right = 290.0
offset_bottom = 440.0
theme = SubResource("Theme_657et")
text = "Gracz 1 (0/6)"

[node name="bp2" type="Button" parent="."]
offset_left = 790.0
offset_top = 320.0
offset_right = 950.0
offset_bottom = 440.0
text = "Gracz 2 (0/6)"

[node name="bp3" type="Button" parent="."]
offset_left = 130.0
offset_top = 1900.0
offset_right = 290.0
offset_bottom = 2020.0
text = "Gracz 3 (0/6)"

[node name="bp4" type="Button" parent="."]
offset_left = 790.0
offset_top = 1906.0
offset_right = 950.0
offset_bottom = 2026.0
text = "Gracz 4 (0/6)"

[node name="btc" type="Button" parent="."]
offset_left = 428.0
offset_top = 981.0
offset_right = 684.0
offset_bottom = 1059.0
text = "Losuj KartÄ™"

[node name="Suit" type="AnimatedSprite2D" parent="."]
position = Vector2(575, 804)
scale = Vector2(0.838, 0.792)
sprite_frames = SubResource("SpriteFrames_7l7j7")

[connection signal="pressed" from="Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="bp1" to="." method="_on_bp_1_pressed"]
[connection signal="pressed" from="bp2" to="." method="_on_bp_2_pressed"]
[connection signal="pressed" from="bp3" to="." method="_on_bp_3_pressed"]
[connection signal="pressed" from="bp4" to="." method="_on_bp_4_pressed"]
[connection signal="pressed" from="btc" to="." method="_on_btc_pressed"]
